--- a/server/package.json
+++ b/server/package.json
@@ -18,14 +18,17 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "dayjs": "^1.10.7",
-    "dotenv": "^6.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.16.4",
     "formidable": "^2.0.1",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.4.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node-xlsx": "^0.21.0",
+    "swagger-jsdoc": "^6.2.7",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
